profile_info section: prevents bio text overflow

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -10,10 +10,11 @@
 @media only screen and (min-device-width : 320px) and (max-device-width : 879px) {
   .profile__info {
     margin-top: 26.25px;
-    width: 282px;
+    max-width: 224px;
     margin-left: auto; 
     margin-right: auto; 
     text-align: center;
+    grid-template-columns: 206fr 18fr;
     
   }
 }
